// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-exports named const export 1`] = `
Object {
  "default": undefined,
  "named": Array [
    Object {
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 22,
          "line": 1,
        },
      },
      "name": "myStory",
    },
  ],
}
`;

exports[`extract-exports named export 1`] = `
Object {
  "default": Object {
    "internalName": undefined,
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 2,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "name": "default",
  },
  "named": Array [
    Object {
      "internalName": "namedExport",
      "loc": Object {
        "end": Object {
          "column": 40,
          "line": 1,
        },
        "start": Object {
          "column": 33,
          "line": 1,
        },
      },
      "name": "namedExport",
    },
  ],
}
`;

exports[`extract-exports named export alias 1`] = `
Object {
  "default": undefined,
  "named": Array [
    Object {
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 22,
          "line": 1,
        },
      },
      "name": "exportedStory",
    },
  ],
}
`;

exports[`extract-exports re-exported name 1`] = `
Object {
  "default": undefined,
  "named": Array [],
}
`;
